# pss-fleet-data-importer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini
.github/workflows/: check-and-test.yml
src/app/: __init__.py  importer.py  main.py
src/app/adapters/: repository.py
src/app/converters/: __init__.py  from_collection_file_db.py  from_gdrive_file.py
src/app/core/: __init__.py  config.py  gdrive.py  utils.py
src/app/database/: __init__.py  async_auto_rollback_session.py  crud.py  db.py  db_repository.py  models.py  unit_of_work.py
src/app/importer/: __init__.py  database_worker.py  download_worker.py  exceptions.py  import_worker.py  importer.py  log.py  utils.py
src/app/log/: __init__.py  base.py  filter.py
src/app/models/: __init__.py  cancellation_token.py  converters.py  exceptions.py  queue_item.py  status.py
src/importer/: __init__.py  importer.py  main.py
src/importer/commands/: __init__.py  callbacks.py  cmd_credentials.py  cmd_download.py  cmd_import.py  options.py
src/importer/core/: __init__.py  config.py  gdrive.py  importer.py  logger.py  utils.py  wrapper.py
src/importer/database/: __init__.py  crud.py  db.py  models.py
src/importer/models/: __init__.py  collection_file.py  collection_file_change.py  converters.py  exceptions.py  queue_item.py  status.py
src/migrations/: env.py
src/migrations/versions/: 2024_07_19_1348-f6873d006975_initial_revision.py  2024_07_24_1819-34c3743f15ed_initial_revision.py  2024_08_06_1253-f1431b1ad6e6_initial_revision.py  2024_08_06_1454-45d917aedf72_initial_revision.py  2024_08_07_1720-7fda994f3831_initial_revision.py
tests/: conftest.py  fake_classes.py  mock_classes.py
tests/10_core/config/: conftest.py  test_config_properties.py
tests/10_core/gdrive/: test_gdrive_file.py  test_get_file_contents.py  test_get_gdrive_file_name.py
tests/10_core/utils/: test_extract_timestamp_from_gdrive_file_name.py  test_get_gdrive_file_name.py  test_get_next_full_hour.py  test_get_now.py  test_remove_timezone.py  test_run_async_thread_pool_executor.py
tests/20_models/cancellation_token/: test_log_if_cancelled.py  test_raise_if_cancelled.py
tests/20_models/collection_file_change/: test_repr.py  test_str.py
tests/80_models/: test_collection_file_queue_item.py
tests/90_importer/: conftest.py  test_cancel_workers.py  test_download_gdrive_file_contents.py  test_init.py
tests/90_importer/database_worker/: test_database_worker.py  test_process_queue_item.py  test_update_queue_item.py
tests/90_importer/download_worker/: conftest.py  test_download_gdrive_file.py  test_file_already_downloaded.py  test_setup_futures.py  test_write_gdrive_file_to_disk.py
tests/90_importer/importer/: conftest.py  test_create_worker_threads.py  test_init.py  (+1 more)
(+69 files in other folders)
